--- a/.docker/.gitignore
+++ b/.docker/.gitignore
@@ -1,6 +1,6 @@
-/developer/mysql/
-/developer/mariadb/
-/developer/pgsql/
-/production/mysql/
-/production/mariadb/
-/production/pgsql/
+/mysql/
+/mariadb/
+/pgsql/
+/mysql/
+/mariadb/
+/pgsql/
