--- a/.docker/php/Dockerfile
+++ b/.docker/php/Dockerfile
@@ -2,11 +2,15 @@ FROM php:8.4-fpm
 
 COPY php.ini /usr/local/etc/php/
 COPY docker.conf /usr/local/etc/php-fpm.d/docker.conf
-COPY .bashrc /root/
-COPY schedule.sh /opt/schedule.sh
-RUN chmod +x /opt/schedule.sh
 
-# mix
+# Personaliza o terminal do usuário ROOT
+COPY .bashrc /root/
+
+# Habilita o Schedule do laravel
+#COPY schedule.sh /opt/schedule.sh
+#RUN chmod +x /opt/schedule.sh
+
+# Instala diversas dependências
 RUN apt-get update \
   && apt-get install -y build-essential zlib1g-dev default-mysql-client curl gnupg procps vim git unzip libzip-dev libpq-dev htop \
   && docker-php-ext-install zip pdo_mysql pdo_pgsql pgsql
@@ -51,31 +55,30 @@ RUN pecl install pcov && docker-php-ext-enable pcov
 # && echo ";zend_extension=xdebug" > /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
 
 # Node.js, NPM, Yarn
-RUN curl -sL https://deb.nodesource.com/setup_22.x | bash -
-RUN apt-get install -y nodejs
-RUN npm install npm@latest -g
-RUN npm install yarn -g
+#RUN curl -sL https://deb.nodesource.com/setup_22.x | bash -
+#RUN apt-get install -y nodejs
+#RUN npm install npm@latest -g
+#RUN npm install yarn -g
 
-# Composer
-RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
-RUN php composer-setup.php
-RUN php -r "unlink('composer-setup.php');"
-RUN mv composer.phar /usr/local/bin/composer
+# Configura o Composer para o laravel
+# RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');"
+# RUN php composer-setup.php
+# RUN php -r "unlink('composer-setup.php');"
+# RUN mv composer.phar /usr/local/bin/composer
 
-ENV COMPOSER_ALLOW_SUPERUSER 1
-ENV COMPOSER_HOME /composer
-ENV PATH $PATH:/composer/vendor/bin
-RUN composer config --global process-timeout 3600
-RUN composer global require "laravel/installer"
+# ENV COMPOSER_ALLOW_SUPERUSER 1
+# ENV COMPOSER_HOME /composer
+# ENV PATH $PATH:/composer/vendor/bin
+# RUN composer config --global process-timeout 3600
+#RUN composer global require "laravel/installer"
 
+# Define o diretório após login do container
 WORKDIR /root
 RUN git clone https://github.com/seebi/dircolors-solarized
 
 # Timezone Config
-ENV TZ=${TZ}
+ENV TZ='$TZ'
 RUN ln -snf /usr/share/zoneinfo/$TZ /etc/localtime && echo $TZ > /etc/timezone
-
-
 
 EXPOSE 5173
 WORKDIR /var/www
