--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,47 +38,47 @@ services:
     ####################################################################################################
     # phpMyAdmin
     ####################################################################################################
-    # phpmyadmin:
-    #     build: ./.docker/phpmyadmin
-    #     container_name: example_phpmyadmin
-    #     restart: unless-stopped
-    #     ports:
-    #         - "8080:80"
-    #         - "4443:443"
-    #     environment:
-    #         PMA_HOST: mariadb
-    #         PMA_PORT: 3306
-    #         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-userpass}   
-    #         TZ: 'America/Sao_Paulo'
-    #         APP_HOST: ${APP_HOST}          
-    #     #volumes:
-    #     # - ./developer/phpmyadmin/sessions:/sessions
-    #     depends_on:
-    #         - mariadb
-    #     networks:
-    #         - private_network
+    phpmyadmin:
+        build: ./.docker/phpmyadmin
+        container_name: example_phpmyadmin
+        restart: unless-stopped
+        ports:
+            - "8080:80"
+            - "4443:443"
+        environment:
+            PMA_HOST: mariadb
+            PMA_PORT: 33306
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-userpass}   
+            TZ: 'America/Sao_Paulo'
+            APP_HOST: ${APP_HOST}          
+        #volumes:
+        # - ./developer/phpmyadmin/sessions:/sessions
+        depends_on:
+            - mariadb
+        networks:
+            - private_network
 
     #####################################################################################################
     # DATABASE (MariaDB)
     #####################################################################################################
-    # mariadb:
-    #     image: mariadb
-    #     container_name: example_mariadb
-    #     restart: unless-stopped
-    #     ports:
-    #         - 3306:3306
-    #     volumes:
-    #         - ./.docker/mariadb/data:/var/lib/mysql
-    #         - ./.docker/mariadb/logs:/var/log/mysql
-    #         - ./.docker/mariadb/my.cnf:/etc/mysql/conf.d/my.cnf
-    #         - ./.docker/mariadb/sql:/docker-entrypoint-initdb.d
-    #     environment:
-    #         MYSQL_DATABASE: ${DB2_DATABASE:-laravel}
-    #         MYSQL_ROOT_PASSWORD: ${DB2_PASSWORD:-root}
-    #         MYSQL_PASSWORD: ${DB2_PASSWORD:-userpass}
-    #         MYSQL_USER: ${DB2_USERNAME:-username}
-    #     networks:
-    #         - private_network
+    mariadb:
+        image: mariadb
+        container_name: example_mariadb
+        restart: unless-stopped
+        ports:
+            - 3306:33306
+        volumes:
+            - ./.docker/mariadb/data:/var/lib/mysql
+            - ./.docker/mariadb/logs:/var/log/mysql
+            - ./.docker/mariadb/my.cnf:/etc/mysql/conf.d/my.cnf
+            - ./.docker/mariadb/sql:/docker-entrypoint-initdb.d
+        environment:
+            MYSQL_DATABASE: ${DB_DATABASE:-cursobdii}
+            MYSQL_USER: ${DB_USERNAME:-username}
+            MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-userpass}
+        networks:
+            - private_network
 
     ####################################################################################################
     # DATABASE (MySQL)
@@ -93,9 +93,9 @@ services:
     #         - ./.docker/mysql/data:/var/lib/mysql
     #         - ./.docker/mysql/logs:/var/log/mysql
     #         - ./.docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
-    #         - ./.docker/mysql/sql:/docker-entrypoint-initdb.d
+    #         - ./.docker/sql:/docker-entrypoint-initdb.d
     #     environment:
-    #         MYSQL_DATABASE: ${DB_DATABASE:-laravel}
+    #         MYSQL_DATABASE: ${DB_DATABASE:-cursobdii}
     #         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
     #         MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
     #         MYSQL_USER: ${DB_USERNAME:-username}
