--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,27 +36,27 @@ services:
             - private_network
 
     ####################################################################################################
-    # phpMyAdmin
-    ####################################################################################################
-    phpmyadmin:
-        build: ./.docker/phpmyadmin
-        container_name: example_phpmyadmin
-        restart: unless-stopped
-        ports:
-            - "8080:80"
-            - "4443:443"
-        environment:
-            PMA_HOST: mariadb
-            PMA_PORT: 33306
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-userpass}   
-            TZ: 'America/Sao_Paulo'
-            APP_HOST: ${APP_HOST}          
-        #volumes:
-        # - ./developer/phpmyadmin/sessions:/sessions
-        depends_on:
-            - mariadb
-        networks:
-            - private_network
+    # phpMyAdmin for MariaDB
+    # ####################################################################################################
+    # mariadbAdmin:
+    #     build: ./.docker/mariadbAdmin
+    #     container_name: example_mariadbAdmin
+    #     restart: unless-stopped
+    #     ports:
+    #         - "8080:80"
+    #         - "4443:443"
+    #     environment:
+    #         PMA_HOST: mariadb
+    #         PMA_PORT: 33306
+    #         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-userpass}   
+    #         TZ: 'America/Sao_Paulo'
+    #         APP_HOST: ${APP_HOST}          
+    #     #volumes:
+    #     # - ./developer/mariadbAdmin/sessions:/sessions
+    #     depends_on:
+    #         - mariadb
+    #     networks:
+    #         - private_network
 
     #####################################################################################################
     # DATABASE (MariaDB)
@@ -81,27 +81,49 @@ services:
             - private_network
 
     ####################################################################################################
-    # DATABASE (MySQL)
+    # phpMyAdmin for MySQL
     ####################################################################################################
-    # mysql:
-    #     image: mysql:8.1
-    #     container_name: example_mysql
-    #     restart: unless-stopped
-    #     ports:
-    #         - 3306:3306
-    #     volumes:
-    #         - ./.docker/mysql/data:/var/lib/mysql
-    #         - ./.docker/mysql/logs:/var/log/mysql
-    #         - ./.docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
-    #         - ./.docker/sql:/docker-entrypoint-initdb.d
-    #     environment:
-    #         MYSQL_DATABASE: ${DB_DATABASE:-cursobdii}
-    #         MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
-    #         MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
-    #         MYSQL_USER: ${DB_USERNAME:-username}
-    #         TZ: 'America/Sao_Paulo'
-    #     networks:
-    #         - private_network
+    mysql_admin:
+        build: ./.docker/mysql_admin
+        container_name: example_mysql_admin
+        restart: unless-stopped
+        ports:
+            - "8080:80"
+            - "4443:443"
+        environment:
+            PMA_HOST: mysql
+            PMA_PORT: 3306
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-userpass}   
+            TZ: 'America/Sao_Paulo'
+            APP_HOST: ${APP_HOST}          
+        #volumes:
+        # - ./developer/mysql_admin/sessions:/sessions
+        depends_on:
+            - mysql
+        networks:
+            - private_network
+    ####################################################################################################
+    # DATABASE (MySQL) - Intentionally Older Version
+    ####################################################################################################
+    mysql:
+        image: mysql:8.1
+        container_name: example_mysql
+        restart: unless-stopped
+        ports:
+            - 3306:3306
+        volumes:
+            - ./.docker/mysql/untracked/data:/var/lib/mysql
+            - ./.docker/mysql/untracked/logs:/var/log/mysql
+            - ./.docker/mysql/untracked/my.cnf:/etc/mysql/conf.d/my.cnf
+            - ./.docker/mariadb/sql:/docker-entrypoint-initdb.d
+        environment:
+            MYSQL_DATABASE: ${DB_DATABASE:-cursobdii}
+            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
+            MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
+            MYSQL_USER: ${DB_USERNAME:-username}
+            TZ: 'America/Sao_Paulo'
+        networks:
+            - private_network
 
     ###################################################################################################
     # PostgreSQL
