--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,9 +38,9 @@ services:
     ####################################################################################################
     # phpMyAdmin for MariaDB
     # ####################################################################################################
-    # mariadbAdmin:
-    #     build: ./.docker/mariadbAdmin
-    #     container_name: example_mariadbAdmin
+    # mariadb_admin:
+    #     build: ./.docker/mariadb_admin
+    #     container_name: example_mariadb_admin
     #     restart: unless-stopped
     #     ports:
     #         - "8080:80"
@@ -52,7 +52,7 @@ services:
     #         TZ: 'America/Sao_Paulo'
     #         APP_HOST: ${APP_HOST}          
     #     #volumes:
-    #     # - ./developer/mariadbAdmin/sessions:/sessions
+    #     # - ./developer/mariadb_admin/sessions:/sessions
     #     depends_on:
     #         - mariadb
     #     networks:
@@ -62,7 +62,7 @@ services:
     # DATABASE (MariaDB)
     #####################################################################################################
     mariadb:
-        image: mariadb
+        image: mariadb:11.7
         container_name: example_mariadb
         restart: unless-stopped
         ports:
@@ -103,10 +103,10 @@ services:
         networks:
             - private_network
     ####################################################################################################
-    # DATABASE (MySQL) - Intentionally Older Version
+    # DATABASE (MySQL) - Intentionally Older Version and with Empty Password
     ####################################################################################################
     mysql:
-        image: mysql:8.1
+        image: mysql:9.3 # mysql:5.7
         container_name: example_mysql
         restart: unless-stopped
         ports:
@@ -114,11 +114,12 @@ services:
         volumes:
             - ./.docker/mysql/untracked/data:/var/lib/mysql
             - ./.docker/mysql/untracked/logs:/var/log/mysql
-            - ./.docker/mysql/untracked/my.cnf:/etc/mysql/conf.d/my.cnf
-            - ./.docker/mariadb/sql:/docker-entrypoint-initdb.d
+            - ./.docker/mysql/my.cnf:/etc/mysql/conf.d/my.cnf
+            - ./.docker/mysql/sql:/docker-entrypoint-initdb.d
         environment:
             MYSQL_DATABASE: ${DB_DATABASE:-cursobdii}
-            MYSQL_ROOT_PASSWORD: ${DB_PASSWORD:-root}
+            MYSQL_ROOT_PASSWORD: "" #${DB_PASSWORD:-root}
+            MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
             MYSQL_PASSWORD: ${DB_PASSWORD:-userpass}
             MYSQL_USER: ${DB_USERNAME:-username}
             TZ: 'America/Sao_Paulo'
