PosgreSQL funcionando corretamente

--- a/.env
+++ b/.env
@@ -16,14 +16,12 @@ DB_USERNAME=admin
 DB_PASSWORD=web
 
 
-# DEVELOPMENT (PGSQL)
-#DB_CONNECTION=pgsql
-DB3_HOST=pgsql
-DB3_PORT=5432
-DB3_DATABASE=DB_name
-DB3_USERNAME=my.email@gmail.com
-DB3_PASSWORD=myPassword
-DB3_PREFIX=my_db_prefix
+# FOR DATABASES POSTGRESQL
+DBPSQL_HOST=pgsql
+DBPSQL_PORT=5432
+DBPSQL_DATABASE=cursobdii
+DBPSQL_USERNAME=admin@local.com
+DBPSQL_PASSWORD=web
 
 # PRODUCTION (SQLSRV-APP)
 DB_CONNECTION=sqlsrv
