--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -130,38 +130,39 @@ services:
     ###################################################################################################
     # PostgreSQL
     ###################################################################################################
-    # pgsql:
-    #     image: postgres:16
-    #     container_name: example_pgsql
-    #     restart: unless-stopped
-    #     ports:
-    #         - 5432:5432
-    #     volumes:
-    #         - ./.docker/pgsql/data:/var/lib/postgresql/data
-    #         - ./.docker/pgsql/sql:/docker-entrypoint-initdb.d
-    #     environment:
-    #         - POSTGRES_USER=${DB3_USERNAME:-username}
-    #         - POSTGRES_PASSWORD=${DB3_PASSWORD:-root}
-    #         - POSTGRES_DB=${DB3_DATABASE:-laravel}
-    #     networks:
-    #         - private_network
+    pgsql:
+        image: postgres:latest
+        container_name: example_pgsql
+        restart: unless-stopped
+        ports:
+            - 5432:5432
+        volumes:
+            - ./.docker/pgsql/data:/var/lib/postgresql/data
+            - ./.docker/mysql/sql:/docker-entrypoint-initdb.d
+        environment:
+            - POSTGRES_USER=${DBPSQL_USERNAME:-username}
+            - POSTGRES_PASSWORD=${DBPSQL_PASSWORD:-root}
+            - POSTGRES_DB=${DBPSQL_DATABASE:-cursobdii}
+        networks:
+            - private_network
 
     ####################################################################################################
     # pgAdmin
     ####################################################################################################
-    # pgadmin:
-    #     image: dpage/pgadmin4
-    #     container_name: example_pgadmin
-    #     restart: unless-stopped
-    #     ports:
-    #         - 5050:80
-    #     environment:
-    #         - PGADMIN_DEFAULT_EMAIL=${DB3_USERNAME:-username@gmail.com}
-    #         - PGADMIN_DEFAULT_PASSWORD=${DB3_PASSWORD:-root}
-    #     depends_on:
-    #         - pgsql
-    #     networks:
-    #         - private_network
+    pgadmin:
+        image: dpage/pgadmin4
+        container_name: example_pgadmin
+        restart: unless-stopped
+        ports:
+            - 5050:80
+        environment:
+            - PGADMIN_DEFAULT_EMAIL=${DBPSQL_USERNAME:-admin@local.com}
+            - PGADMIN_DEFAULT_PASSWORD=${DBPSQL_PASSWORD:-root}
+            - POSTGRES_DB=${DBPSQL_DATABASE:-cursobdii}
+        depends_on:
+            - pgsql
+        networks:
+            - private_network
      ####################################################################################################
     # SQL Server
     ####################################################################################################  
