--- a/.env
+++ b/.env
@@ -23,13 +23,8 @@ DBPSQL_DATABASE=cursobdii
 DBPSQL_USERNAME=admin@local.com
 DBPSQL_PASSWORD=web
 
-# PRODUCTION (SQLSRV-APP)
-DB_CONNECTION=sqlsrv
-DB4_HOST=127.0.0.1
-DB4_PORT=2150
-DB4_DATABASE=DB_name
-DB4_USERNAME=username_db
-DB4_PASSWORD=passowrd_db
-DB4_PREFIX=my_db_prefix
-DB4_ENCRYPT=no
-DB4_TRUST_SERVER_CERTIFICATE=true
+# FOR DATABASES SQLSERVER
+MSSQL__DATABASE=cursobdii
+MSSQL_USERNAME=SA
+MSSQL_SA_PASSWORD=Senha@Forte
+MSSQL_TCP_PORT=1433 
