Security accaunt update for mariadb

--- a/.env
+++ b/.env
@@ -12,7 +12,7 @@ APP_FAKER_LOCALE=en_US
 # FOR DATABASES MYSQL EN MARIADB
 DB_PORT=3306
 DB_DATABASE=cursobdii
-DB_USERNAME=admin
+DB_USERNAME=convidado
 DB_PASSWORD=web
 
 
